fix: add explicit line-height as controller appears squashed in some sites
Eg, https://www.epicweb.dev/

--- a/shadow.css
+++ b/shadow.css
@@ -1,5 +1,7 @@
 * {
+  line-height: 1em;
   font-family: sans-serif;
+  /* font-size: 13px; */
 }
 
 :host(:hover) #controls {
